Fix for F invocations

--- a/preamble.tex
+++ b/preamble.tex
@@ -138,6 +138,7 @@
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
+\newcommand*{\joined}{\wideparen}
 
 % GP terms
 \newcommand*{\goodset}{\psi_\mathbf{g}}
